<resources>
    <string name="app_name">Tour Guide</string>
    <string name="app_name_long">Tour Guide Mountain View</string>
    <string name="tab_tile_startups">Startups</string>
    <string name="tab_tile_eating">Eating</string>
    <string name="tab_tile_sports">Sports</string>
    <string name="tab_tile_tour">Tour</string>
    <string name="question_main_activity">Why tech lovers love Mountain View?</string>
    <string name="answer_question_main_activity">The answer is pretty easy. It concentrates a large ecosystem of Startups in the world. If You like tech stuff You gonna love the city.</string>
    <string name="see_attractions">See attractions!</string>
    <string name="google">Google</string>
    <string name="linkedin">Linkedin</string>
    <string name="the_city">The City</string>
    <string name="upwork">Upwork</string>
    <string name="elastic">Elastic</string>
    <string name="name">Name:</string>
    <string name="industry">Industry:</string>
    <string name="founded">Founded:</string>
    <string name="founders">Founders:</string>
    <string name="site">Site:</string>
    <string name="about">About:</string>
    <string name="address">Address:</string>
    <string name="see_on_map">See on Map</string>
    <string name="course_name">Nanodegree Android Basic</string>
    <string name="project_number">Project 06</string>
    <string name="author">by Jesse Lima</string>
    <string name="gallery">Gallery</string>
    <string name="name_google">Google</string>
    <string name="name_udacity">Udacity</string>
    <string name="name_linkedin">Linkedin</string>
    <string name="name_elastic">Elastic</string>
    <string name="name_upwork">Upwork</string>
    <string name="name_livongo">Livongo</string>
    <string name="name_punchh">Punchh</string>
    <string name="name_pure_storage">Pure Storage</string>
    <string name="description_google">Google LLC is an American multinational technology company that specializes in Internet-related services and products, which include online advertising technologies, search engine, cloud computing, software and hardware</string>
    <string name="description_udacity">Udacity is an e-learning platform that offers credential programs in artificial intelligence, machine learning, and robotics.</string>
    <string name="description_linkedin">LinkedIn is a business and employment-oriented service that operates via websites and mobile apps. It is mainly used for professional networking, including employers posting jobs and job seekers posting their CVs.</string>
    <string name="description_elastic">Elasticsearch is a search engine based on Lucene. It provides a distributed, multitenant-capable full-text search engine with an HTTP web interface and schema-free JSON documents.</string>
    <string name="description_upwork">Upwork, formerly Elance-oDesk, is a global freelancing platform where businesses and independent professionals connect and collaborate remotely.</string>
    <string name="description_livongo">Livongo is empowering people with chronic conditions to live a better life.</string>
    <string name="description_punchh">Punchh offers digital marketing products combining AI and machine learning technologies.</string>
    <string name="description_pure_storage">Pure Storage is enterprise storage company for broad deployment of flash in data centers.</string>
    <string name="founders_google">Larry Page, Sergey Brin</string>
    <string name="founders_udacity">David Stavens, Mike Sokolsky, Sebastian Thrun</string>
    <string name="founders_linkedin">Reid Hoffman</string>
    <string name="founders_elastic">Shay Banon</string>
    <string name="founders_upwork">Beerud Sheth and Srini Anumolu</string>
    <string name="founders_livongo">Kimon Angelides</string>
    <string name="founders_punchh">Aditya Sanghi, Jitendra Gupta, Sastry Penumarthy, Shyam Rao</string>
    <string name="founders_pure_storage">John Colgrove, John Hayes</string>
    <string name="site_google">www.google.com</string>
    <string name="site_udacity">www.udacity.com</string>
    <string name="site_linkedin">www.linkedin.com</string>
    <string name="site_elastic">www.elastic.co</string>
    <string name="site_upwork">www.upwork.com</string>
    <string name="site_livongo">www.livongo.com</string>
    <string name="site_punchh">www.punchh.com</string>
    <string name="site_pure_storage">www.purestorage.com</string>
    <string name="industry_google">Internet, Software, Computer Hardware</string>
    <string name="industry_udacity">E-Learning, EdTech, Education, Internet</string>
    <string name="industry_linkedin">Professional Network</string>
    <string name="industry_elastic">Search Engine</string>
    <string name="industry_upwork">Freelance marketplace</string>
    <string name="industry_livongo">Health Care, Health Diagnostics, Information Technology, Wellness</string>
    <string name="industry_punchh">Digital Marketing</string>
    <string name="industry_pure_storage">Cloud Computing, Data Storage, Enterprise Software</string>
    <string name="address_google">1600 Amphitheatre Pkwy, Mountain View, CA 94043, USA</string>
    <string name="address_udacity">2465 Latham St, Mountain View, CA 94040, USA</string>
    <string name="address_linkedin">1000 W Maude Ave, Sunnyvale, CA 94085, USA</string>
    <string name="address_elastic">800 W El Camino Real #350, Mountain View, CA 94040, USA</string>
    <string name="address_upwork">441 Logue Ave, Mountain View, CA 94043, USA</string>
    <string name="address_livongo">441 Logue Ave, Mountain View, CA 94043, USA</string>
    <string name="address_punchh">201 San Antonio Cir #250, Mountain View, CA 94040, USA</string>
    <string name="address_pure_storage">650 Castro St #400, Mountain View, CA 94041, USA</string>
    <string name="label">Label:</string>
</resources>
