<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartupDetailsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_google"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin16"
                android:layout_marginStart="@dimen/layout_margin16"
                android:orientation="vertical">

                <include android:id="@+id/name"
                    layout="@layout/item_startup_details"/>

                <include android:id="@+id/industry"
                    layout="@layout/item_startup_details"/>

                <include android:id="@+id/founded"
                    layout="@layout/item_startup_details"/>

                <include android:id="@+id/founders"
                    layout="@layout/item_startup_details"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/site"
                        android:textSize="@dimen/text_size_sub_heading_16"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/text_view_site"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_16"
                        tools:text="www.google.com"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/about"
                    android:textSize="@dimen/text_size_sub_heading_16"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_view_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_16"
                    tools:text="Google LLC is an American multinational technology company that specializes in Internet-related services and products, which include online advertising technologies, search engine, cloud computing, software, and hardware"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin16"
                android:layout_marginStart="@dimen/layout_margin16"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:text="@string/address"
                    android:textSize="@dimen/text_size_sub_heading_16"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_24"
                android:layout_marginEnd="@dimen/layout_margin16"
                android:layout_marginStart="@dimen/layout_margin16"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_location_black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="map"
                        android:gravity="center"
                        android:text="@string/see_on_map"
                        android:textStyle="italic"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_address"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="italic"
                        tools:text="1600 Amphitheatre Pkwy, Mountain View, CA 94043, USA"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>